fix: correct station height on mobile

--- a/client/src/app/components/station/station.component.scss
+++ b/client/src/app/components/station/station.component.scss
@@ -102,6 +102,8 @@
   }
 
   @media only screen and (max-width: $display-xs) {
+    height: 6rem;
+
     img {
       display: none;
     }
